<resources>
    <string name="app_name">Music search app</string>
    <string name="artist_search">Artist</string>
    <string name="title_search">Title</string>
    <string name="format_search">Format</string>
    <string name="year_search">Year</string>
    <string name="search">Search</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Firebase Authentication</string>

    <string name="hint_user_id">User ID</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Up</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_logo">Universidad Politécnica de Madrid</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">User: %s</string>
    <string name="firebase_user_management">User Management</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="anonymous_sign_in">Anonymous Sign In</string>
    <string name="account_linking">Login interface customization example</string>
    <string name="status_logged">Logged</string>
    <string name="field_required">Field required.</string>

    <string name="user_email">Email</string>
    <string name="user_pass">Password</string>
    <string name="user_repeat_pass">Repeat Password</string>
    <string name="user_name">Name</string>
    <string name="user_lastname">Last name</string>
    <string name="user_phone">Phone number</string>
    <string name="user_direction">Home Address</string>
    <string name="user_save">Save</string>
    <string name="user_logout">Logout</string>
</resources>