<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_email"
        android:importantForAutofill="no"
        android:inputType="text">
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_pass"
        android:importantForAutofill="no"
        android:password="true"
        android:inputType="text">
    </EditText>

    <EditText
        android:id="@+id/etPasswordRepeated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_repeat_pass"
        android:password="true"
        android:importantForAutofill="no"
        android:inputType="text">
    </EditText>

    <EditText
        android:id="@+id/etNameSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:importantForAutofill="no"
        android:inputType="text">
    </EditText>

    <EditText
        android:id="@+id/etLastNameSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_lastname"
        android:importantForAutofill="no"
        android:inputType="text">
    </EditText>

    <EditText
        android:id="@+id/etPhoneSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_phone"
        android:importantForAutofill="no"
        android:inputType="text">
    </EditText>

    <EditText
        android:id="@+id/etUserDirectionSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_direction"
        android:importantForAutofill="no"
        android:inputType="text">
    </EditText>
    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:onClick="finish"
        android:text="@string/sign_up"/>

</LinearLayout>