<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:importantForAutofill="no"
        android:inputType="text">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_lastname"
        android:importantForAutofill="no"
        android:inputType="text">
    </EditText>

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_phone"
        android:importantForAutofill="no"
        android:inputType="text">
    </EditText>

    <EditText
        android:id="@+id/etUserDirection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_direction"
        android:importantForAutofill="no"
        android:inputType="text">
    </EditText>
    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:onClick="saveProfile"
        android:text="@string/user_save"/>
    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:onClick="logout"
        android:text="@string/user_logout"/>
</LinearLayout>