<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/backgroundmain"
    tools:context=".activities.MainActivity">


    <TextView
        android:id="@+id/statusEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/statusId"
        android:layout_marginBottom="8dp"
        android:textStyle="bold"
        tools:text="Email: none" />

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="@dimen/field_width_standard"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fieldEmail"
        android:layout_alignStart="@+id/titleAnonymous"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="14dp"
        android:text="@string/sign_in" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="@dimen/field_width_standard"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/buttonSignIn"
        android:enabled="true"
        android:text="@string/sign_out"
        android:layout_toEndOf="@+id/buttonSignIn" />


    <EditText
        android:id="@+id/fieldEmail"
        android:layout_width="@dimen/field_width_standard"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleLinking"
        android:layout_alignStart="@+id/titleAnonymous"
        android:layout_marginStart="1dp"
        android:layout_marginTop="9dp"
        android:hint="@string/hint_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/fieldPassword"
        android:layout_width="@dimen/field_width_standard"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/fieldEmail"
        android:layout_toEndOf="@+id/fieldEmail"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:importantForAutofill="no" />


</RelativeLayout>