<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:background="@drawable/searchbackground"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etArtist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/artist_search"
        android:textStyle="bold"
        android:importantForAutofill="no"
        android:inputType="text">
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:hint="@string/title_search"
        android:importantForAutofill="no"
        android:inputType="text">
    </EditText>

    <EditText
        android:id="@+id/etYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:hint="@string/year_search"
        android:importantForAutofill="no"
        android:inputType="text">
    </EditText>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox android:id="@+id/cbFormatVinyl"
            android:textStyle="bold"
            android:checked="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Vinyl"
            android:onClick="onCheckboxClicked"/>

        <CheckBox android:id="@+id/cbFormatCD"
            android:textStyle="bold"
            android:checked="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="CD"
            android:onClick="onCheckboxClicked"/>
    </LinearLayout>

    <Spinner
        android:id="@+id/genre_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="338dp"
        android:entries="@array/genre_array"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:onClick="searchDisc"
        android:text="@string/search"/>

</LinearLayout>